# versacores

./: .gitignore  abitu.versacore  pyproject.toml  readme.txt  top.versacore
src/: utils.py
src/versacores/: __init__.py  __main__.py  core.py  simplhdlparser.py  utils.py  versacore.py  views.py
src/versacores/views/: __init__.py  base.py  create.py  generate.py  top.py
versacores/: __main__.py  core.py  exceptions.py  simplhdlparser.py  versacore.py
versacores/versacores.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
