[build-system]
requires = ["setuptools>=60.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "versacores"
version = "0.0.1"
description = "A versatile core management system."
readme = "README.md"
authors = [{name = "Troels Folke", email = "troelsmf@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "SimplHDL",
]

[project.scripts]
versacores = "versacores.__main__:main"

[project.entry-points."simplhdl.plugins"]
parser = "versacores"

[project.urls]
"Homepage" = "https://github.com/Toucanfan/versacores"
"Bug Tracker" = "https://github.com/Toucanfan/versacores/issues"
